--- a/food_in/package.json
+++ b/food_in/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "bootstrap": "^3.4.1",
     "crypto-js": "^4.1.1",
+    "flowbite": "^1.8.1",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
